tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@math_on_map_literal.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/math_on_map_literal.txt
---
error: Math operations can only be done on numbers, found `map/struct`
 --> math_on_map_literal.txt:1:4
  |
1 | {{ {'a': one} * 2 }}
  |    ^^^^^^^^^^
